--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,21 +2,22 @@
   <div class="container">
     <h1 class="title-center">Contact Us</h1>
     <form id="form-contact">
-    <div class="block-group">
-      <div class="col6 block">
-        <label for="fullname">Your Name</label>
-        <input type="text" class="input" name="fullname" id="fullname" required>
+      <p class="form-message"></p>
+      <div class="block-group">
+        <div class="col6 block">
+          <label for="fullname">Your Name</label>
+          <input name="name" type="text" class="input" required>
+        </div>
+        <div class="col6 block">
+          <label for="emailaddress">Email Address</label>
+          <input name="email" type="email" class="input" required>
+        </div>
+        <div class="col12 block">
+          <label for="message">Message</label>
+          <textarea name="message" class="textarea" cols="30" rows="5" required></textarea>
+          <button type="submit" class="btn">Send the message</button>
+        </div>
       </div>
-      <div class="col6 block">
-        <label for="emailaddress">Email Address</label>
-        <input type="email" class="input" name="emailaddress" id="emailaddress" required>
-      </div>
-      <div class="col12 block">
-        <label for="message">Message</label>
-        <textarea wrap="off" class="textarea" cols="30" rows="5" id="message" required></textarea>
-        <button type="submit" class="btn">Send the message</button>
-      </div>
-    </div>
     </form>
   </div>
 </section>
