--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
 {% include footer.html %}
 
 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="/js/vendor/jquery.validate.min.js"></script>
+<script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+<script src="//cdn.firebase.com/js/client/2.3.1/firebase.js"></script>
 <script src="/js/vendor/mobile.min.js"></script>
 <script src="/js/main.js"></script>
 
