Fix menu links for subpages, and extract to partial

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,6 @@
 <div class="phone-menu">
   <ul class="menu">
-    <li class="phone-menu-item"><a href="#about" class="scrolllink">About</a></li>
-    <li class="phone-menu-item"><a href="#services" class="scrolllink">Services</a></li>
-    <li class="phone-menu-item"><a href="#clients" class="scrolllink">Clients</a></li>
-    <li class="phone-menu-item"><a href="#contact" class="scrolllink">Contact</a></li>
+    {% include main_menu.html %}
   </ul>
 </div>
 
@@ -13,10 +10,7 @@
   <a href="#top" class="logo scrolllink"></a>
 
   <ul class="menu">
-    <li><a href="#about" class="scrolllink">About</a></li>
-    <li><a href="#services" class="scrolllink">Services</a></li>
-    <li><a href="#clients" class="scrolllink">Clients</a></li>
-    <li><a href="#contact" class="scrolllink">Contact</a></li>
+    {% include main_menu.html %}
   </ul>
 
   <div class="btn-menu">
