Revert "Career pages"
This reverts commit d7b9c880b2aa8bb04745bca48d02f7a58e7452c7.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
 <header class="header">
   <span class="bg"></span>
 
-  <a href="{% if page.url != '/index.html' %}/{% else %}#top{% endif %}" class="logo scrolllink"></a>
+  <a href="#top" class="logo scrolllink"></a>
 
   <ul class="menu">
     {% include main_menu.html %}
