--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,9 @@
 <script src="//ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
 <script src="//cdn.firebase.com/js/client/2.3.1/firebase.js"></script>
 <script src="/js/vendor/mobile.min.js"></script>
+<script src="/js/vendor/p5.min.js"></script>
 <script src="/js/main.js"></script>
+<script src="/js/murmuration.js"></script>
 
 </body>
 
