--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -448,38 +448,50 @@ section .container{
 section.welcome {
     width: 100%;
     height: 600px;
-    background: url(../img/bg_welcome.jpg) center center no-repeat;
     background-size: cover;
     color: #fff;
+
+    canvas {
+      max-width: 100%;
+    }
 }
 
 section.welcome .container {
-    padding-top: 240px;
+  position: relative;
+  margin-left: 0;
+  max-width: 100%;
 }
 
 section.welcome .container h1{
+    position: absolute;
+    top: 40%;
+    left: 25%;
     text-align: center;
     font-size: 40px;
     line-height: 48px;
     font-weight: 700;
     text-transform: uppercase;
-    margin: 0 auto;
+    margin: 0;
 }
 
 section.welcome .container h2{
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    max-width: 50%;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
     font-size: 28px;
     line-height: 40px;
     font-weight: 300;
-    max-width: 760px;
     margin: 20px auto;
 }
 
 .welcome-icon{
     display: block;
-    position: relative;
-    padding-top: 220px;
+    position: absolute;
+    bottom: 15px;
+    left: 50%
 }
 
 .icon-anim,
