--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,21 @@
 ---
 layout: default
 ---
-<div class="post">
+<section class="subheader subheader-team">
+  <div class="container post-header">
+    <h1 class="post-title">{{page.title}}</h1>
+    <h2 class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</h2>
+  </div>
+</section>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+<section class="content" id="blog">
+    <div class="container">
+<div class="post">
 
   <article class="post-content">
     {{ content }}
   </article>
 
 </div>
+    </div>
+</section>
