--- a/_includes/main_menu.html
+++ b/_includes/main_menu.html
@@ -3,4 +3,5 @@
 <li><a href="{{ path_prefix }}#services" class="scrolllink">Services</a></li>
 <li><a href="{{ path_prefix }}#clients" class="scrolllink">Clients</a></li>
 <li><a href="{{ path_prefix }}blog" class="scrolllink">Blog</a></li>
+<li><a href="{{ path_prefix }}career" class="scrolllink">Career</a></li>
 <li><a href="{{ path_prefix }}#contact" class="scrolllink">Contact</a></li>
