--- a/_layouts/career.html
+++ b/_layouts/career.html
@@ -11,20 +11,23 @@ layout: default
 <section class="content" id="career-advert">
   <div class="container">
     <article class="post-content">
-      <h1>{{ page.title }}</h1>
+      <!-- <h1>{{ page.title }}</h1> -->
 
-      <section id="career-intro">
+      <!-- <section id="career-intro">
         <p>We are <strong>100Starlings</strong>, a group of like-minded individuals who work together for a set of clients. We’ve been very successful at having more work than we can handle - and that is taking its toll on us. We aren't a digital agency but a <span class="hashtag">#cooperative</span> that can offer the same services without the usual overhead.</p>
-      </section>
+      </section> -->
 
       <section id="career-requirements">
-        <h2>What you can bring</h2>
+        <!-- <h2>What you can bring</h2> -->
 
         {{ content }}
       </section>
 
       <section id="career-about-us">
-        <h2>A bit more about us</h2>
+        <h2>
+          <br>
+          <br>A bit more about us
+        </h2>
 
         <p>What we can offer is a great team, competitive rates and all the benefits of working in a <span class="hashtag">#cooperative</span>, like a yearly <span class="hashtag">#trainingbudget</span> and an appreciation that we are all human beings.</p>
 
@@ -33,7 +36,10 @@ layout: default
       </section>
 
       <section id="career-cta">
-        <h2>HOW TO APPLY</h2>
+        <h2>
+          <br>
+          <br>HOW TO APPLY
+        </h2>
         <ul>
           <li>Send examples of your work at
             <strong>career@100starlings.com</strong>.</li>
