Added contact email to the footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,4 +5,5 @@
 
 <footer class="footer">
   <small>Copyright {{ "now" | date: "%Y" }} 100Starlings Ltd.</small>
+  <small>Contact: <a class="footer-link-style" href="mailto:info@100starlings.com">info@100starlings.com</a></small>
 </footer>
